# HomeworldSDL

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  AUTHORS  BUGS  CHANGELOG  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NOTES  README  README.md  aclocal.m4  bootstrap  configure  configure.in  meson.build  meson.options  meson_options.txt  wasm32-emscripten.meson-cross-build-definition.txt
HomeworldSDL_big/: README.txt  convert_directory_to_big_file  files.txt  generate_file_list.py  meson.build  plug.tga  textures.ll.64
HomeworldSDL_big/defaultship/: defaultship.geo.64
HomeworldSDL_big/feman/: CSM-ALL.fib.64  Choose_Server.fib.64  Construction_Manager.fib.64  Front_End.fib.64  Game_Chat.FIB.64  Horse_Race.fib.64  Hyperspace_Roll_Call.fib.64  In_game_esc_menu.FIB.64  Launch_Manager.FIB.64  Multiplayer_Game.fib.64  Multiplayer_LAN_Game.fib.64  Research_manager.fib.64  Sensors_manager.fib.64  TaskBar.fib.64  Trader_Interface.FIB.64  front_end_demo.fib.64  front_end_nomultiplayer.fib.64  multiplayer_game_nonetwork.fib.64  single_player_objective.fib.64
HomeworldSDL_big/nis/: m02a.nis.64  m03a.nis.64  m06a.nis.64  m07a.nis.64  m08a.nis.64  m09a.nis.64  m09b.nis.64  m10a.nis.64  m11a.nis.64  m12a.nis.64  m12br1.nis.64  m12br2.nis.64  m13a.nis.64  m13b.nis.64  m13cr1.nis.64  (+31 more)
Linux/: AUTHORS  BUILD.md  CHANGELOG  INSTALL  README.X86_64  bootstrap  bootstrap.old  flake.nix  hwsdl.kdevelop  shell.nix
Linux/stuff/: Makefile.am  acinclude.m4  configure.ac  configure.in
Mac/: BUILD.md  Homeworld.icns  Homeworld.plist  Homeworld_Prefix.h  Info.plist  RaiderRetreat.icns  RaiderRetreat.plist  Readme.txt  SDLMain.m  SDLVersion.txt  guidestone.icns
Windows/: building.txt  hwsdl.sln  hwsdl.vcproj  readme.txt  vc8_hwsdl.sln  vc8_hwsdl.vcproj
autom4te.cache/: output.0  requests  traces.0
config/: Makefile.in
documentation/: Glossary.txt  HWSDL_enhancements.txt  MAD_animation_tutorial.doc  Music_editing_tutorial.doc  README.txt  btg-user-guide.rtf  coding_standards.txt  tasks.txt
mingw/: Makefile  hw.rc
src/: Makefile.am  Makefile.in  meson.build
src/Game/: AIAttackMan.c  AIAttackMan.h  AIDefenseMan.c  AIDefenseMan.h  AIEvents.c  AIEvents.h  AIFeatures.h  AIFleetMan.c  AIFleetMan.h  AIHandler.c  AIHandler.h  AIMoves.c  AIMoves.h  AIMoves1.c.h  AIMoves2.c.h  AIOrders.c  AIOrders.h  AIPlayer.c  AIPlayer.h  AIResourceMan.c  AIResourceMan.h  AIShip.c  AIShip.h  AITeam.c  AITeam.h  AITrack.c  AITrack.h  AIUtilities.c  AIUtilities.h  AIVar.c  AIVar.h  Alliance.c  Alliance.h  Animatic.c  Animatic.h  Attack.c  Attack.h  Attributes.h  AutoDownloadMap.c  AutoDownloadMap.h  (+286 more)
src/JPG/: Makefile.in  interfce.c  interfce.h  jchuff.c  jcmainct.c  jconfig.h  jdatasrc.c  jdmainct.c  jdmaster.c  jinclude.h  jmorecfg.h  jpeglib.h  jpegrc.h
src/Missions/: meson.build
src/Missions/SinglePlayer/: Mission01.kas  Mission02.kas  Mission03.kas  Mission04.kas  Mission05.kas  Mission05_OEM.kas  Mission06.kas  Mission07.kas  Mission08.kas  Mission09.kas  Mission10.kas  Mission11.kas  Mission12.kas  Mission13.kas  Mission14.kas  Mission15.kas  Mission16.kas  Swarmer.kash  Utilities.kash  meson.build
src/Missions/Tutorials/: Tutorial1.kas  meson.build
src/SDL/: ClientCDKey.cpp  ClientCDKey.h  LinkLimits.h  Makefile.am  Makefile.in  NetworkInterface.c  NetworkInterface.h  Queue.c  Queue.h  Subtitle.c  Subtitle.h  TimeoutTimer.c  TimeoutTimer.h  Titan.c  Titan.h  TitanInterface.cpp  TitanInterface.h  TitanInterfaceC.c  TitanInterfaceC.h  TitanPacketMsg.cpp  TitanPacketMsg.h  avi.c  avi.cpp  avi.h  color.c  color.h  dct.c  dct.h  ddraw.cpp  debugwnd.c  debugwnd.h  devstats.h  dxdraw.cpp  dxdraw.h  font.c  font.h  fqcodec.c  fqcodec.h  fqeffect.c  fqeffect.h  (+60 more)
src/Ships/: AdvanceSupportFrigate.c  AdvanceSupportFrigate.h  Carrier.c  Carrier.h  CloakGenerator.c  CloakGenerator.h  DDDFrigate.c  DDDFrigate.h  DFGFrigate.c  DFGFrigate.h  DefaultShip.c  DefaultShip.h  DefenseFighter.c  DefenseFighter.h  Drone.c  Drone.h  FloatingCity.c  FloatingCity.h  GenericDefender.c  GenericDefender.h  GenericInterceptor.c  GenericInterceptor.h  GravWellGenerator.c  GravWellGenerator.h  HeavyCorvette.c  HeavyCorvette.h  HeavyCruiser.c  HeavyCruiser.h  IonCannonFrigate.c  IonCannonFrigate.h  LightCorvette.c  LightCorvette.h  Makefile.am  Makefile.in  MinelayerCorvette.c  MinelayerCorvette.h  MissileDestroyer.c  MissileDestroyer.h  Mothership.c  Mothership.h  (+45 more)
src/SinglePlayer/: Mission01.kas  Mission02.kas  Mission03.kas  Mission04.kas  Mission05.kas  Mission05_OEM.kas  Mission06.kas  Mission07.kas  Mission08.kas  Mission09.kas  Mission10.kas  Mission11.kas  Mission12.kas  Mission13.kas  Mission14.kas  Mission15.kas  Mission16.kas  Swarmer.kash  Utilities.kash
src/Tutorials/: Tutorial1.kas
src/kas2c/: Makefile.in  README.txt  kas2c.c  kas2c.h  lexer.c  parser.c  parser.h  parser.y
src/rgl/: 3dhw.h  Makefile.am  Makefile.in  asm-asm.c  asm-c.c  asm.c  asm.h  clip.c  clip.h  d3dblt.cpp  d3dblt.h  d3denum.cpp  d3denum.h  d3dinit.cpp  d3dinit.h  d3dlist.h  d3driver.cpp  d3drv.h  d3dtex.cpp  d3dtex.h  draw.cpp  draw.def  fixed.h  fxclose.c  fxdriver.c  fxdrv.h  fxtmg.c  gldefines.h  hash.c  hash.h  kgl.c  kgl.h  kgl_macros.h  kglu.c  kvb.c  lines.c  lines.h  linetemp.h  maths.c  maths.h  (+16 more)
subprojects/: demo-assets.wrap
tools/: Makefile.am  README.txt  meson.build
tools/biggie/: BitIO.c  LZSS.c  LZSS.h  Types.h  bigfile.c  bigfile.h  biggie-Linux-compile.sh  biggie-MacOSX-compile.sh  biggie-macOS-compile.sh  crc32.c  crc32.h  main.c  meson.build  options.c  options.h  version.c  version.h
tools/kas2c/: Makefile.am  README.txt  kas2c-MacOSX-compile.sh  kas2c-macOS-compile.sh  kas2c.c  kas2c.h  lexer.l  meson.build  parser.y
tools/monochrome-btg/: README.txt  meson.build  monochrome-btg-MacOSX-compile.sh  monochrome-btg.c
tools/polycount/: Makefile.am  file.c  main.c  meson.build  mex.c
tools/x86_64/: Makefile  README  bank.c  bank.h  fib.c  fib.h  file.c  file.h  font.c  font_l.h  geo.c  geo.h  lif.c  lif.h  ll.c  ll.h  mad.c  mad.h  meson.build  nis.c  nis.h
wasm/: index.html
(+1518 files in other folders)
