AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(HomeworldSDL, 0.1.1)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AM_PROG_LEX
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL

dnl Check if building on Windows (based off GTK+ 2.2.4 configure.in...I'm not
dnl very familiar with autoconf).
AC_MSG_CHECKING([if we're in Windows])
case "$host" in
	*-*-mingw*|*-*-cygwin*)
		platform_win32=yes
		;;
	*)
		platform_win32=no
		;;
esac
AC_MSG_RESULT([$platform_win32])
AM_CONDITIONAL(PLATFORM_WIN32, test "$platform_win32" = "yes")

dnl Platform-independent data types.
AX_CREATE_STDINT_H

dnl "bool" supported by C++ compiler?
AC_CXX_BOOL

dnl Check for SDL.
SDL_VERSION=1.2.6
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

dnl Add necessary flags for compiler and linker.
dnl - One and only one of "HW_Debug", "HW_Interim", and "HW_Release" macros
dnl   must be defined.  Should probably allow choosing one through the
dnl   configure script at some point.
dnl - "-lstdc++" is needed in LIBS since the linker assumes we're only linking
dnl   C object files (a couple C++ files are thrown in there).
dnl - $SDL_CFLAGS and $SDL_LIBS should be pretty much self-explanatory. =]
CFLAGS="$CFLAGS -DHW_Release $SDL_CFLAGS"
CXXFLAGS="$CXXFLAGS -DHW_Release $SDL_CFLAGS"
LIBS="$LIBS -lstdc++ $SDL_LIBS"

AC_OUTPUT(Makefile config/Makefile src/Makefile src/Game/Makefile src/Generated/Makefile src/JPG/Makefile src/kas2c/Makefile src/rgl/Makefile src/SDL/Makefile src/Ships/Makefile)
