src_game = files('AIAttackMan.c',
                 'AIDefenseMan.c',
                 'AIEvents.c',
                 'AIFleetMan.c',
                 'AIHandler.c',
                 'AIMoves.c',
                 'AIOrders.c',
                 'AIPlayer.c',
                 'AIResourceMan.c',
                 'AIShip.c',
                 'AITeam.c',
                 'AITrack.c',
                 'AIUtilities.c',
                 'AIVar.c',
                 'Alliance.c',
                 'Animatic.c',
                 'Attack.c',
                 'AutoDownloadMap.c',
                 'AutoLOD.c',
                 'Battle.c',
                 'BigFile.c',
                 'Blobs.c',
                 'BMP.c',
                 'Bounties.c',
                 'B-Spline.c',
                 'BTG.c',
                 'Camera.c',
                 'CameraCommand.c',
                 'Captaincy.c',
                 'ChannelFSM.c',
                 'Chatting.c',
                 'Clamp.c',
                 'Clipper.c',
                 'Clouds.c',
                 'Collision.c',
                 'Color.c',
                 'ColPick.c',
                 'CommandLayer.c',
                 'CommandNetwork.c',
                 'CommandWrap.c',
                 'ConsMgr.c',
                 'Crates.c',
                 'Damage.c',
                 'Debug.c',
                 'Demo.c',
                 'Dock.c',
                 'ETG.c',
                 'Eval.c',
                 'FEFlow.c',
                 'FEReg.c',
                 'File.c',
                 'FlightMan.c',
                 'FontReg.c',
                 'Formation.c',
                 'GameChat.c',
                 'GamePick.c',
                 'Globals.c',
                 'Gun.c',
                 'Hash.c',
                 'HorseRace.c',
                 'HS.c',
                 'InfoOverlay.c',
                 'KAS.c',
                 'KASFunc.c',
                 'KNITransform.c',
                 'KeyBindings.c',
                 'Key.c',
                 'LagPrint.c',
                 'LaunchMgr.c',
                 'LevelLoad.c',
                 'Light.c',
                 'LinkedList.c',
                 'LOD.c',
                 'MadLinkIn.c',
                 'Matrix.c',
                 'Memory.c',
                 'MeshAnim.c',
                 'Mesh.c',
                 'MEX.c',
                 'MultiplayerGame.c',
                 'MultiplayerLANGame.c',
                 'NavLights.c',
                 'Nebulae.c',
                 'NetCheck.c',
                 'NIS.c',
                 'Objectives.c',
                 'ObjTypes.c',
                 'Options.c',
                 'Particle.c',
                 'Physics.c',
                 'PiePlate.c',
                 'Ping.c',
                 'PlugScreen.c',
                 'ProfileTimers.c',
                 'Randy.c',
                 'Region.c',
                 'ResCollect.c',
                 'ResearchAPI.c',
                 'ResearchGUI.c',
                 'SaveGame.c',
                 'ScenPick.c',
                 'Scroller.c',
                 'Select.c',
                 'Sensors.c',
                 'Shader.c',
                 'ShipSelect.c',
                 'ShipView.c',
                 'SinglePlayer.c',
                 'SoundEvent.c',
                 'SoundEventPlay.c',
                 'SoundEventStop.c',
                 'SpeechEvent.c',
                 'Star3d.c',
                 'Stats.c',
                 'StatScript.c',
                 'StringSupport.c',
                 'Subtitle.c',
                 'Tactical.c',
                 'Tactics.c',
                 'TaskBar.c',
                 'Task.c',
                 'Teams.c',
                 'Timer.c',
                 'TitanNet.c',
                 'Tracking.c',
                 'TradeMgr.c',
                 'Trails.c',
                 'Transformer.c',
                 'Tutor.c',
                 'Tweak.c',
                 'Twiddle.c',
                 'Types.c',
                 'UIControls.c',
                 'Undo.c',
                 'Universe.c',
                 'UnivUpdate.c',
                 'Vector.c',
                 'Volume.c')

src_game += custom_target('wrapped_functions.h',
                          input: ['functions.h', 'wrap.h', 'wrap_types.h'],
                          output: 'wrapped_functions.h',
                          command: [meson.get_compiler('c').cmd_array(), '-E', '-o', '@OUTPUT@', '@INPUT0@'])

inc_src_game = include_directories('.')
